--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,7 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+  adapter: postgresql
+  database: willow_bride
+  pool: 5
+  timeout: 5000
