--- a/config/application.yml
+++ b/config/application.yml
@@ -1,2 +1,2 @@
-username: 'heather.allaman@gmail.com'
-password: 'DollyBaby1984'
+gmail_username: 'heather.allaman@gmail.com'
+gmail_password: 'DollyBaby1984'
