--- a/config/application.yml
+++ b/config/application.yml
@@ -8,7 +8,7 @@
 #
 production:
   gmail_username: "heather.allaman@gmail.com"
-  gmail_password: "DollyBaby1984"
+  gmail_password: "Chiangmai0316"
   aws_bucket: "willowbride"
   aws_key_id: "AKIAITDF5CWTU4XDBR4A"
   aws_access_key: "6KSZ1Rb4Dc9d+OVHeEZrL6PG/m1qRh2H3G5J22Nf"
