--- a/config/application.yml
+++ b/config/application.yml
@@ -7,9 +7,8 @@
 # stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
 #
 production:
-  gmail_username: "heather.allaman@gmail.com"
-  gmail_password: "Chiangmai0316"
+  GMAIL_USERNAME: "heather.allaman@gmail.com"
+  GMAIL_PASSWORD: "Chiangmai0316"
   aws_bucket: "willowbride"
   aws_key_id: "AKIAITDF5CWTU4XDBR4A"
   aws_access_key: "6KSZ1Rb4Dc9d+OVHeEZrL6PG/m1qRh2H3G5J22Nf"
-
